# atlas

./: .env.example  .gitignore  .railway-trigger  pyproject.toml  railway.toml
.planning/: .continue-here.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  TECHNICAL_REFERENCE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-webhook-event-handler/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-webhook-hardening/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: main.py  slack_app.py
app/core/: config.py  database.py  logging.py
app/core/clients/: calendly.py  claude.py  ghl.py  google_search.py  ninjapear.py  ocean.py  otter.py  serper.py  slack.py
app/models/: database.py
app/modules/: hints.py
app/modules/admin/: dlq_router.py
app/modules/audit/: calendly_backfill.py  ceo_mirror.py  digest.py  dm_digest.py  engine.py  router.py  rules.py  scorecard.py  tracker.py  verification.py
app/modules/autofill/: updater.py
app/modules/health/: checks.py
docs/: FUTURE_MODULES.md  GHL_FIELD_REFERENCE.md  PIPELINE_REFERENCE.md  REFINEMENT_PLAN.md  SLA_REFERENCE.md
migrations/: 001_initial.sql  002_autonomy.sql  003_meeting_intelligence.sql  004_pipeline_movement.sql  005_audit_dismissed.sql  006_accountability.sql
(+28 files in other folders)
