[project]
name = "atlas"
version = "0.1.0"
description = "Calendly-to-GHL automation service with conversational AI agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.0",
    "uvicorn>=0.41.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.13.0",
    "apscheduler>=3.11.0,<4.0",
    "tenacity>=9.1.0",
    "structlog>=25.5.0",
    "orjson>=3.10.0",
    "slack-bolt>=1.27.0",
    "anthropic>=0.84.0",
    "aiosqlite>=0.20.0",
    "asgi-correlation-id>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
